test/Fail/NoLoadPrims.agda
{-# OPTIONS --no-load-primitives #-}

module NoLoadPrims where

-- Tests that sortKit doesn't explode the TC when --no-load-primitives is set.
_ : ?
_ = ?
