test/Fail/NoLoadPrims.err
NoLoadPrims.agda:6.5-6: error: [NoBindingForBuiltin]
No binding for builtin thing PROP, use {-# BUILTIN PROP name #-} to
bind it to 'name'
when checking that the expression ? is a type
